[gd_scene load_steps=7 format=3 uid="uid://c7d8faf0g1h2i"]

[ext_resource type="Script" uid="uid://4xepmjomesfc" path="res://src/entities/minions/minion.gd" id="1_turret_script"]
[ext_resource type="Resource" path="res://src/core/data/effects/player_hit_spark_effect.tres" id="2_hit_spark_effect"]
[ext_resource type="Resource" path="res://src/entities/archetypes/minion_archetype.tres" id="3_archetype"]
[ext_resource type="Resource" uid="uid://bps1fb52qcel8" path="res://src/core/data/effects/dissolve_effect.tres" id="6_dissolve_effect"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_turretbody"]
size = Vector2(50, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_rangedetector"]
radius = 400.0

[node name="Minion" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 131
script = ExtResource("1_turret_script")
hit_spark_effect = ExtResource("2_hit_spark_effect")
dissolve_effect = ExtResource("6_dissolve_effect")
archetype = ExtResource("3_archetype")

[node name="Visual" type="Polygon2D" parent="."]
color = Color(0.490196, 0.490196, 0.490196, 1)
polygon = PackedVector2Array(-25, -25, 25, -25, 25, 25, -25, 25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_turretbody")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RangeDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeDetector"]
shape = SubResource("CircleShape2D_rangedetector")

[connection signal="body_entered" from="RangeDetector" to="." method="_on_range_detector_body_entered"]
[connection signal="body_exited" from="RangeDetector" to="." method="_on_range_detector_body_exited"]
